[tool.poetry]
name = "cdc-trigger-replicator"
version = "1.0.0"
description = "Trigger-based SQL Server CDC Replicator"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
pyodbc = "^5.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
